Revert "Update api prefix to include api versions"
This reverts commit a58bc38316fb758f8e98c4840ef98c8a9091104f.
